Add border and background styling to 'music' and 'tour' sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1 class="yeat-logo">[YEAT LOGO]</h1>
+    <h1 class="yeat-logo">YEAT</h1>
     <div class="all-music-container">
       <h2 class="heading">MUSIC</h2>
       <div class="album-container">
